--- a/index.html
+++ b/index.html
@@ -813,7 +813,12 @@
                                 brigher life
                             </div>
                         </div>
-                        <a id="specialButton" href="#"><img src="https://lidrekon.ru/images/special.png" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" /></a>
+                        <div class="footer__special">
+                            <a id="specialButton" href="#">
+                                <img src="images/svg/eye.svg" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" />
+                                версия для слабовидящих
+                            </a>
+                        </div>
                         <div class="footer__social">
                             <div class="footer__title">
                                 Всегда с вами
