--- a/doctors.html
+++ b/doctors.html
@@ -338,6 +338,12 @@
                                 brigher life
                             </div>
                         </div>
+                        <div class="footer__special">
+                            <a id="specialButton" href="#">
+                                <img src="images/svg/eye.svg" alt="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" title="ВЕРСИЯ ДЛЯ СЛАБОВИДЯЩИХ" />
+                                версия для слабовидящих
+                            </a>
+                        </div>
                         <div class="footer__social">
                             <div class="footer__title">
                                 Всегда с вами
@@ -447,6 +453,7 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
         <!-- <script src="js/bootstrap.min.js"></script> -->
+        <script src="https://lidrekon.ru/slep/js/uhpv-hover-full.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
