--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </div>
                         <div class="about__actions">
                             <a href="about.html" class="button">Подробнее</a>
-                            <a href="#map" class="about__link"><span>Skolmed</span> на карте</a>
+                            <a href="#map" class="about__link scroll-to"><span>Skolmed</span> на карте</a>
                         </div>
                     </div>
                 </div>
@@ -787,7 +787,7 @@
             </div>
         </section>
 
-        <section class="map">
+        <section class="map" id="map">
             <div class="container">
                 <div class="map__content">
                     <h2 class="map__title title">
