--- a/program-card.html
+++ b/program-card.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Skolmed - Программы</title>
+    <title>Skolmed - Комплексные программы</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="Description" content="">
     <meta name="Keywords" content="">
@@ -91,157 +91,48 @@
                         <div class="breadcrumbs__item">
                             <a href="index.html">Главная</a>
                         </div>
-                        <div class="breadcrumbs__item active">
+                        <div class="breadcrumbs__item">
                             <a href="programms.html">Комплексные программы</a>
+                        </div>
+                        <div class="breadcrumbs__item active">
+                            <a href="programs-card.html">Анти-ковид</a>
                         </div>
                     </div>
                     <h2 class="offer__about--title">
-                        Комплексные программы
+                        Анти-ковид
                     </h2>
                     <div class="offer__about--content offer__programs--content">
-                        <div class="programs__list">
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-1.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        Программа <br>“Анти-ковид”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="program-card.html" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
+                        <div class="programs__info">
+                            <div class="programs__info--left">
+                                <div class="programs__info--photo">
+                                    <img src="images/jpg/program-card-photo.png" alt="program card photo">
                                 </div>
                             </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-2.png" alt="programs">
+                            <div class="programs__info--right">
+                                <div class="programs__info--text">
+                                    <p>
+                                        Современные мегаполисы повсеместно являются зоной повышенного экологического риска. Всё дальше и дальше отдаляясь от природы, мы становится зависимыми от искусственно созданных городских условий жизни, переработанных продуктов питания и т.д.
+                                    </p>
+                                    <p>
+                                        В результате всего, мы теряем самое главное – наше бесценное здоровье, как физическое, так и психическое.
+                                    </p>
+                                    <p>
+                                        Клиника иммунореабилитации, превентивной и криомедицины Grand Clinic представляет комплекс из двух передовых процедур, призванных всего за 1,5 часа вывести функционирование вашего организма на совершенно новый уровень, во-первых, придав ему бодрости и «взбодрив» все системы в криокапсуле и во-вторых – «закрепив эффект» насыщением клеток кислородом в барокамере.
+                                    </p>
+                                    <p>
+                                        Этот полутора часовой комплекс, по мнению всех, кто уже прошел его, дает именно ту перезагрузку, которая так нужна всем жителям мегаполиса.
+                                    </p>
                                 </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        Программа <br>“Снижение веса”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
+                                <div class="programs__info--price">
+                                    Стоимость программы: <span>65 000 руб.</span>
                                 </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-3.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        Программа <br>“Красота и здоровье”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-4.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        Программа <br>“Антистресс”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-5.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        Программа <br>“Детокс”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-6.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        “Активация иммунитета”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-7.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        “Опорно-двигатеьный аппарат”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="programs__item">
-                                <div class="programs__item--photo">
-                                    <img src="images/jpg/programm-8.png" alt="programs">
-                                </div>
-                                <div class="programs__item--info">
-                                    <div class="programs__item--title">
-                                        “Мужские <br>программы”
-                                    </div>
-                                    <div class="programs__item--button">
-                                        <a href="#" class="button button4">
-                                            Подробнее
-                                            <div class="button--icon">
-                                                <img src="images/svg/arrow-right-btn.svg" alt="arrow">
-                                            </div>
-                                        </a>
-                                    </div>
+                                <div class="programs__info--buttons">
+                                    <a href="#" class="button">
+                                        Купить программу
+                                    </a>
+                                    <a href="#" class="button button3">
+                                        В рассрочку
+                                    </a>
                                 </div>
                             </div>
                         </div>
