--- a/prices.html
+++ b/prices.html
@@ -97,10 +97,128 @@
                     </div>
                     <h2 class="offer__about--title">
                         Цены
+                        <a href="#" class="link">Полный перечень в pdf</a>
                     </h2>
                     <div class="offer__about--content offer__prices--content">
                         <div class="prices__info">
-                            
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        <div class="accordion-button__icon">
+                                            <img src="images/svg/price-icon-1.svg" alt="icon">
+                                        </div>
+                                        Оториноларингология
+                                    </button>
+                                  </h2>
+                                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                      <div class="prices__table">
+                                        <div class="prices__table--item">
+                                            <div class="prices__table--left">
+                                            <div class="prices__table--title">
+                                                Первичная консультация
+                                            </div>
+                                            <div class="prices__table--desc">
+                                                Здесь будет краткое описание и при необходимости ФИО врача, который проводит услугу.
+                                            </div>
+                                            </div>
+                                            <div class="prices__table--right">
+                                            <div class="prices__table--price">
+                                                1500 руб.
+                                            </div>
+                                            </div>
+                                        </div>
+                                        <div class="prices__table--item type-2">
+                                        <div class="prices__table--left">
+                                            <div class="prices__table--title">
+                                            Промывание пазух носа через соустье
+                                            </div>
+                                            <div class="prices__table--desc">
+                                            Здесь будет краткое описание и при необходимости ФИО врача, который проводит услугу.
+                                            </div>
+                                        </div>
+                                        <div class="prices__table--right">
+                                            <div class="prices__table--price">
+                                                1000 руб.
+                                            </div>
+                                        </div>
+                                        </div>
+                                        <div class="prices__table--item">
+                                        <div class="prices__table--left">
+                                            <div class="prices__table--title">
+                                            Промывание методом перемещения
+                                            </div>
+                                        </div>
+                                        <div class="prices__table--right">
+                                            <div class="prices__table--price">
+                                                1400 руб.
+                                            </div>
+                                        </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <div class="accordion-button__icon">
+                                            <img src="images/svg/price-icon-2.svg" alt="icon">
+                                        </div>
+                                        Педиатрия
+                                    </button>
+                                  </h2>
+                                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <div class="prices__table">
+                                            <div class="prices__table--item">
+                                                <div class="prices__table--left">
+                                                <div class="prices__table--title">
+                                                    Прием врача-педиатра первичный, амбулаторный
+                                                </div>
+                                                <div class="prices__table--desc">
+                                                    Здесь будет краткое описание и при необходимости ФИО врача, который проводит услугу.
+                                                </div>
+                                                </div>
+                                                <div class="prices__table--right">
+                                                <div class="prices__table--price">
+                                                    1900 руб.
+                                                </div>
+                                                </div>
+                                            </div>
+                                            <div class="prices__table--item type-2">
+                                            <div class="prices__table--left">
+                                                <div class="prices__table--title">
+                                                    Прием врача-педиатра, повторный, амбулаторный
+                                                </div>
+                                                <div class="prices__table--desc">
+                                                    Здесь будет краткое описание и при необходимости ФИО врача, который проводит услугу.
+                                                </div>
+                                            </div>
+                                            <div class="prices__table--right">
+                                                <div class="prices__table--price">
+                                                    1700 руб.
+                                                </div>
+                                            </div>
+                                            </div>
+                                            <div class="prices__table--item">
+                                            <div class="prices__table--left">
+                                                <div class="prices__table--title">
+                                                    Анализ крови
+                                                </div>
+                                            </div>
+                                            <div class="prices__table--right">
+                                                <div class="prices__table--price">
+                                                    400 руб.
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -674,8 +792,7 @@
         <script src="js/jquery-3.1.1.min.js"></script>
         <!-- Owl Carousel -->
         <script src="js/owl.carousel.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-        <!-- <script src="js/bootstrap.min.js"></script> -->
+        <script src="js/bootstrap.bundle.min.js"></script>
         <script src="https://lidrekon.ru/slep/js/uhpv-hover-full.min.js"></script>
         <script src="js/script.js"></script>
     </body>
